fixes to logo alignment

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -43,13 +43,20 @@ a {
 .logo__a {
   color: currentColor;
   text-decoration: none;
+  display: inline-block;
+  padding: .5rem;
+}
+
+.logo__img {
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
 }
 
 .nav__list {
   padding: 0;
   margin: 0;
   list-style: none;
-  /* font-family: sans-serif; */
   color: black;
 }
 
@@ -86,7 +93,6 @@ a {
 
 .selectorPanel__items {
   display: flex;
-  /* font-size: 75%; */
   margin-left: -1rem;
   margin-right: -1rem;
   justify-content: space-between;
@@ -100,7 +106,6 @@ a {
   min-height: 40vh;
   display: flex;
   align-items: center;
-  /* box-shadow:0 14px 26px -12px rgba(23, 105, 255, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(23, 105, 255, 0.2); */
 }
 
 .selectorPanel__header {
@@ -135,13 +140,11 @@ a {
   color: black;
   transition: background-color .25s ease-in-out,
   transform .25s ease-in-out;
-  /* box-shadow:0 14px 26px -12px rgba(23, 105, 255, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(23, 105, 255, 0.2); */
   will-change: auto;
 }
 
 .pageSelector__item:hover {
   color: white;
-  /* transform: scale(1.02); */
 }
 
 .pageSelector__item:hover * {
@@ -207,7 +210,6 @@ a {
 
 .pageSelector__tags {
   font-size: 22px;
-  /* color: #9b9b9b; */
 }
 
 .pageSelector__a {
@@ -216,8 +218,6 @@ a {
 }
 
 .pageSelector__content {
-  /* font-family: sans-serif; */
-  /* color: #9b9b9b; */
   font-size: 16px;
 }
 
@@ -234,8 +234,6 @@ a {
 }
 
 .footer {
-  /* font-size: 75%; */
-  /* font-family: sans-serif; */
   text-align: center;
   display: flex;
   padding-top: 5rem;
@@ -289,13 +287,11 @@ a {
 
 .hero__content {
   font-family: 'Roboto', sans-serif;
-  /* color: #9b9b9b; */
   font-size: 16px;
 }
 
 @media only screen and (min-width: 600px) {
   .hero {
-    /* font-size: 150%; */
     margin-top: 20vh;
     margin-bottom: 18vh;
   }
@@ -349,7 +345,6 @@ a {
   padding-bottom: 1rem;
 }
 
-/* Tempory, I'll need stylign for this  */
 blockquote {
   position: relative;
 }
